[package]
name = "mojave_network_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
derivative = "2.2.0"
pnet = "0.35.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
bytesize = "2.3.1"
walkdir = "2.5.0"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"
